--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_install:
   - docker build -t danielhasler/react-test -f ./client/Dockerfile.dev ./client
 
 script:
-  - docker run danielhasler/react-test npm test -- --coverage
+  - docker run -e CI=true danielhasler/react-test npm test -- --coverage
 
 after_success:
   - docker build -t danielhasler/multi-client ./client
